Adicionando Pandas para tratamento dos dados

--- a/consultas.ipynb
+++ b/consultas.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "'5120fcb9c7msha0c848c2940b2edp14b94ejsnd94949c64196'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2210,7 @@
        "    'penalty': {'home': None, 'away': None}}}]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2835,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2957,7 +2957,7 @@
        "4 2023-01-29 21:30:00+00:00       NaN     NaN       0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3003,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3218,15 +3218,15 @@
        "[72 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# com o numpy, atualiza o campo técnico conforme data que Dorival Junior entrou\n",
+    "# Informação sobre os técnicos https://tricolornaweb.com.br/treinadores-do-spfc-2012-a-2023/ não vi se a API tem dados do técnico\n",
     "df_final[\"tecnico\"] = np.where(df_final[\"data_jogo\"] < '2023-04-22','Rogério Ceni','Dorival Junior')\n",
-    "df_final"
+    "display(df_final)"
    ]
   },
   {
@@ -3316,7 +3316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3349,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3385,7 +3385,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6320,24 +6320,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final.loc[df_final[\"data_jogo\"].dt.year == 2023]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'year'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_133857/2929560478.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_final\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_final\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"data_jogo\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'2023'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.virtualenvs/airtable-sp/lib/python3.10/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6295\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6296\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6297\u001b[0m         ):\n\u001b[1;32m   6298\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6299\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'year'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([2023], dtype=int32)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_final.loc[df_final[\"data_jogo\"].year == '2023']\n",
+    "df_final.data_jogo.dt.year.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final.sort_values(by=\"data_jogo\").to_csv('amostra.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Paulista - A1', 'Friendlies Clubs', 'Serie A',\n",
+       "       'CONMEBOL Sudamericana', 'Copa Do Brasil'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.torneio.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from models.jogos import Jogos\n",
+    "import pandas as pd\n",
+    "from pyairtable import Api, Base, Table\n",
+    "\n",
+    "api_key = 'patmZ5FF3ytglUmc0.30b8bdd90d36dba44110c9351fb9ebdd602666e9b3ba8e5d96475c13ae8d4b79'\n",
+    "base_id = 'appt1Ti26Kq8T2LUq'\n",
+    "api = Api(api_key)\n",
+    "base = Base(api, base_id)\n",
+    "table = base.table('Jogos')\n",
+    "table_data = table.all()\n",
+    "\n",
+    "lista = []\n",
+    "for r, col in enumerate(table_data): # linha da lista = r , nome da coluna = col\n",
+    "    lista.append(table_data[r][\"fields\"])\n",
+    "\n",
+    "df_jogos = pd.DataFrame(lista)\n",
+    "\n",
+    "# df_jogos[\"Data do Jogo\"].dt.year.unique()\n",
+    "df_jogos['Data do Jogo'] = pd.to_datetime(df_jogos['Data do Jogo']) # converte coluna de obj para datetime\n",
+    "cols = df_jogos.columns\n",
+    "cols = cols.map(lambda x: x.replace(' ','_') if isinstance(x, (str)) else x)\n",
+    "df_jogos.columns = cols\n",
+    "\n",
+    "\n",
+    "len(df_jogos.index)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# -- get columns\n",
+    "# df_jogos = pd.DataFrame(columns=['adversario', 'local', 'gols_pro', 'gols_contra', 'torneio', 'resultado', 'data_jogo', 'avaliacao', 'tecnico', 'pontos'])\n",
     "\n"
    ]
   }
