removido a exposição do token

--- a/consultas.ipynb
+++ b/consultas.ipynb
@@ -6379,123 +6379,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Resultado</th>\n",
-       "      <th>Data_do_Jogo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Derrota</td>\n",
-       "      <td>2024-04-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Empate</td>\n",
-       "      <td>2023-03-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Empate</td>\n",
-       "      <td>2023-05-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Vitória</td>\n",
-       "      <td>2023-03-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Vitória</td>\n",
-       "      <td>2023-02-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Derrota</td>\n",
-       "      <td>2023-07-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Vitória</td>\n",
-       "      <td>2023-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Empate</td>\n",
-       "      <td>2023-05-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Vitória</td>\n",
-       "      <td>2023-11-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Empate</td>\n",
-       "      <td>2023-01-22</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>101 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Resultado Data_do_Jogo\n",
-       "0     Derrota   2024-04-04\n",
-       "1      Empate   2023-03-13\n",
-       "2      Empate   2023-05-02\n",
-       "3     Vitória   2023-03-05\n",
-       "4     Vitória   2023-02-12\n",
-       "..        ...          ...\n",
-       "96    Derrota   2023-07-22\n",
-       "97    Vitória   2023-07-01\n",
-       "98     Empate   2023-05-11\n",
-       "99    Vitória   2023-11-29\n",
-       "100    Empate   2023-01-22\n",
-       "\n",
-       "[101 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 9\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[1;32m      6\u001b[0m load_dotenv()  \u001b[38;5;66;03m# take environment variables from .env.\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m api_key \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAIRTABLE_API_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     10\u001b[0m base_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mappt1Ti26Kq8T2LUq\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     11\u001b[0m api \u001b[38;5;241m=\u001b[39m Api(api_key)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
     }
    ],
    "source": [
     "from models.jogos import Jogos\n",
     "import pandas as pd\n",
-    "from pyairtable import Api, Base, Table\n",
+    "from pyairtable import Api, Base\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "api_key = 'patmZ5FF3ytglUmc0.30b8bdd90d36dba44110c9351fb9ebdd602666e9b3ba8e5d96475c13ae8d4b79'\n",
+    "load_dotenv()  # take environment variables from .env.\n",
+    "\n",
+    "\n",
+    "api_key = os.environ['AIRTABLE_API_KEY']\n",
     "base_id = 'appt1Ti26Kq8T2LUq'\n",
     "api = Api(api_key)\n",
     "base = Base(api, base_id)\n",
